height of the left bar on mobile fixed

--- a/main.css
+++ b/main.css
@@ -209,7 +209,7 @@ float:left!important;
 
 .leftbar {
 width: 100%;
-
+height:100%;
 }
 
 .mobilevideo {
